--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "expo": "~51.0.25",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-dom": "^18.3.1",
+    "react-native": "0.74.5",
+    "react-native-web": "^0.19.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
