--- a/package.json
+++ b/package.json
@@ -9,17 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.25",
+    "@babel/preset-typescript": "^7.24.7",
+    "@expo/metro-runtime": "~3.2.1",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/masked-view": "0.1.11",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/layout": "^0.0.0-alpha.6",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "expo": "^51.0.25",
+    "expo-asset": "~10.0.10",
+    "expo-font": "~12.0.9",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
+    "expo-updates": "~0.25.22",
+    "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.74.5",
-    "react-native-web": "^0.19.12"
+    "react-native-gesture-handler": "~2.18.1",
+    "react-native-reanimated": "^3.15.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "3.34.0",
+    "react-native-svg": "15.5.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "^0.19.12",
+    "typescript": "~5.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.3.3",
+    "typescript": "^5.5.4"
   },
   "private": true
 }
